# komari-tg-bot

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: db.rs  http_webhook.rs  main.rs
src/connection/: api_nodes.rs  api_public.rs  api_version.rs  mod.rs
src/connection/ws_get/: get_node_id.rs  mod.rs  status.rs  total_status.rs
