[package]
name = "komari-tgbot"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.17.0", features = ["full"] }
log = { version = "0.4.27", features = ["std"] }
simple_logger = { version = "5.0.0", features = ["colored", "colors", "stderr"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite"] }
serde = { version = "1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "1.0.142", default-features = false, features = ["std"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
axum = { version = "0.8.4", default-features = false, features = ["tokio", "macros"] }
uuid = { version = "1.17.0", default-features = false, features = ["std", "v4"] }
urlencoding = "2.1.3"

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false, strip = true, debug-assertions = false, overflow-checks = false }